refactor: remove ShippingDetails class and update ShippingCalculator to handle shipping calculations directly